# lamkit

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst  installation.rst  make.bat  quickstart.rst  requirements.txt
example/1-laminate/: example_laminate.py
example/2-lekhnitskii-solution/: example_unloaded_hole.py
example/3-open-hole/: example_open_hole.py
example/4-effective-stiffness/: example_effective_stiffness.py
example/5-laminate-buckling/: example_buckling.py
example/6-laminate-optimization-task/: example_laminate_opt_function.py  output.txt
example/7-layup-feasibility/: example_layup_feasibility.py  output.txt
src/lamkit/: __init__.py  utils.py
src/lamkit/analysis/: buckling.py  failure.py  laminate.py  larc05.py  material.py
src/lamkit/components/: build_k.py  build_layup_database.py  functions.py
src/lamkit/layup/: feasibility.py  requirements.py
src/lamkit/lekhnitskii/: __init__.py  hole.py  homogenisation.py  loaded_hole.py  unloaded_hole.py  utils.py
tests/: conftest.py  test_additional_coverage.py  test_buckling.py  test_example_imports.py  test_laminate.py  test_larc05.py  test_lekhnitskii.py  test_material.py
