[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "lamkit"
dynamic = ["version"]
description = "Toolkit for stress analysis and failure prediction of composite laminates with holes and joints."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Runze Li" }
]
keywords = ["composite", "laminate", "stress analysis", "engineering", "open-hole", "buckling", "bjsfm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.1"
]
docs = [
  "sphinx>=8.0",
  "furo>=2024.8.6",
  "myst-parser>=4.0"
]

[project.urls]
Homepage = "https://github.com/swayli94/lamkit"
Documentation = "https://swayli94.github.io/lamkit/"
Repository = "https://github.com/swayli94/lamkit"
Issues = "https://github.com/swayli94/lamkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lamkit"]

[tool.hatch.version]
path = "src/lamkit/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
